--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2001-04-05  John Levon  <moz@compsoc.man.ac.uk>
 
+	* doc/oprofile.sgml:
+	* doc/html/resources.html: add URLs
+
+2001-04-05  John Levon  <moz@compsoc.man.ac.uk>
+
 	* pp/oprofpp.c: fix gprof output bug. It works OK now,
 	  but MULTIPLIER == 1 will break for some reason
 
