--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-04-08  John Levon  <moz@compsoc.man.ac.uk>
+
+	* configure.in: 0.0.3 has been released. Bump cvs version
+	  to 0.0.4
+
 2001-04-05  John Levon  <moz@compsoc.man.ac.uk>
 
 	* dae/opd_proc.c: remove forced dumping. It was
