--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2001-06-03  John Levon  <moz@compsoc.man.ac.uk>
 
+	* pp/oprofpp.h: remove libiberty header that was
+	  apparently breaking install on slackware
+ 
+2001-06-03  John Levon  <moz@compsoc.man.ac.uk>
+
 	* README: update
  
 2001-06-03  Philippe Elie  <ph_e@club-internet.fr>
