--- a/README
+++ b/README
@@ -8,4 +8,5 @@ Please visit the oprofile website at : http://oprofile.sourceforge.net/
 oprofile was written by John Levon <moz@compsoc.man.ac.uk>.
 
 Philippe Elie <ph_e@club-internet.fr> contributed a fix for unit-mask
-testing and verified many of the event types experimentally.
+testing, verified many of the event types experimentally, and wrote
+the tcl/tk oprofile interface.
