--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-06-04  John Levon  <moz@compsoc.man.ac.uk>
+
+	* dae/oprofiled.c: move logfile message to
+	  before close(1) to not need to use stderr
+ 
 2001-06-03  John Levon  <moz@compsoc.man.ac.uk>
 
 	* gui/: new directory
