--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2001-06-23  Philippe Elie  <ph_e@club-internet.fr>
+
+	* pp/oprof_convert.c: new utility to convert samples files when the opd_footer
+	  struct is changed.
+	* pp/Makefile.in: reflect the above change. Tidy some unnecessary blank.
+	* Makefile.in: Tidy some unnecessary blank/tabulation.
+
 2001-06-23  John Levon  <moz@compsoc.man.ac.uk>
 
 	* README: update
