--- a/README
+++ b/README
@@ -7,7 +7,6 @@ Please visit the oprofile website at : http://oprofile.sf.net/
 
 oprofile was written by John Levon <moz@compsoc.man.ac.uk>.
 
-Philippe Elie <ph_e@club-internet.fr> contributed fixes for unit-mask
-testing, verified many of the event types experimentally, wrote
-the tcl/tk oprofile interface, added options to oprofpp, and made various
-other fixes and feature implementations.
+Philippe Elie <ph_e@club-internet.fr> contributed many bug fixes,
+wrote the tcl/tk oprofile interface and the source annotation facility,
+and more.
