--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-06-30  John Levon  <moz@compsoc.man.ac.uk>
+
+	* pp/Makefile.in: fix the fix
+
+	* pp/opf_filter.h: very minor changes
+ 
 2001-06-29  John Levon  <moz@compsoc.man.ac.uk>
 
 	* pp/Makefile.in: fix up for opf_filter
