--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2001-07-14  John Levon  <moz@compsoc.man.ac.uk>
+
+	* doc/oprofile.sgml: make it clear we want vmlinux not vmlinuz
+
+	* doc/html/: remove generated files from CVS
+
+	* Makefile.in: changes to create HTML files on dist 
+ 
 2001-06-30  John Levon  <moz@compsoc.man.ac.uk>
 
 	* pp/Makefile.in: fix the fix
