--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-07-14  John Levon  <moz@compsoc.man.ac.uk>
 
+	* Makefile.in: dist fix
+ 
+2001-07-14  John Levon  <moz@compsoc.man.ac.uk>
+
 	* doc/oprofile.sgml: make it clear we want vmlinux not vmlinuz
 
 	* doc/html/: remove generated files from CVS
