--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-07-14  Philippe Elie  <ph_e@club-internet.fr>
+
+	* doc/oprofile.sgml:
+	* doc/oprofile.1.in: minor doc fix.
+
 2001-07-14  John Levon  <moz@compsoc.man.ac.uk>
 
 	* doc/oprofile.sgml: small tidies
