--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-07-15  John Levon  <moz@compsoc.man.ac.uk>
 
+	* TODO: remove done thing
+ 
+2001-07-15  John Levon  <moz@compsoc.man.ac.uk>
+
 	* dae/opd_proc.c: backup old sample files if the profiling
 	  details (count, unit mask etc.) disagree. Fixes #435245
  
