extra bit of warning docs stuff

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-07-18  John Levon  <moz@compsoc.man.ac.uk>
 
+	* doc/oprofile.sgml: add in bit I forgot about not profiling ring 0 
+ 
+2001-07-18  John Levon  <moz@compsoc.man.ac.uk>
+
 	* doc/oprofile.sgml: added a warning about very low counter values
 	  (from Philippe, modified)
  
