--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2001-07-21  Philippe Elie  <ph_e@club-internet.fr>
+ 
+ 	* doc/oprofile.sgml:
+ 	* gui/oprofile:
+ 	* oprofile.c: remove edge_detect support.
+ 
+ 	* pp/oprofpp.c: check counter range for each event type.
+ 	* oprofile.c: ditto.
+ 	* gui/oprofile: ditto and save setup for each event type.
+ 	* oprofile.h: op_check_range() : display the allowed range.
+
+2001-07-18  Philippe Elie  <ph_e@club-internet.fr>
+ 
+	* dae/op_start: disable all counters before starting the setup.
+
 2001-07-18  John Levon  <moz@compsoc.man.ac.uk>
 
 	* doc/oprofile.sgml: add in bit I forgot about not profiling ring 0 
