--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2001-07-24  Philippe Elie  <ph_e@club-internet.fr>
+
+	* dae/opd_util.c:
+	* dae/opd_util.h: add relative path name to absolute path name stuff
+	* pp/oprofpp.c: use it.
+	* pp/op_to_source: simplify code to reflect above change.
+
 2001-07-25  John Levon  <moz@compsoc.man.ac.uk>
 
 	* dae/opd_proc.c: fix uninitialised pointer access (reported by
