--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2001-07-25  John Levon  <moz@compsoc.man.ac.uk>
+
+	* pp/Makefile.in:
+	* pp/oprof_convert.c: convert to v4
+ 
+	* pp/oprofpp.c: use opd_strdup
+	 
+2001-07-25  John Levon  <moz@compsoc.man.ac.uk>
+
+	* dae/opd_util.c: small tidy
+ 
 2001-07-24  Philippe Elie  <ph_e@club-internet.fr>
 
 	* dae/opd_util.c:
