--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-08-10  John Levon  <moz@compsoc.man.ac.uk>
+
+	* oprofile.c: small tidy in apic setup
+ 
 2001-08-02  John Levon  <moz@compsoc.man.ac.uk>
 
 	* oprofile.c: fix mod unload race, small fixes
