--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-08-11  John Levon  <moz@compsoc.man.ac.uk>
+
+	* dae/op_dump:
+	* doc/oprofile.sgml:
+	* dae/Makefile.in: a little utility for dumping
+
 2001-08-11  Dave Jones  <davej@suse.de>
 
 	* oprofile.h:
