--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-08-16  John Levon  <moz@compsoc.man.ac.uk>
+
+	* all Makefile.in: mkdir install files
+
 2001-08-15  Philippe Elie  <ph_e@club-internet.fr>
 
 	* dae/opd_proc.c: fix a FILE* leak in opd_get_ascii_maps()
