--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-08-16  John Levon  <moz@compsoc.man.ac.uk>
 
+	* configure.in: bump version to 0.0.5cvs
+ 
+2001-08-16  John Levon  <moz@compsoc.man.ac.uk>
+
 	* all Makefile.in: mkdir install files
 
 2001-08-15  Philippe Elie  <ph_e@club-internet.fr>
