--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2001-08-16  Philippe Elie  <ph_e@club-internet.fr>
+
+	* gui/oprofile:
+	* dae/op_start:
+	* doc/oprofile.1.in: document and use op_dump
+
 2001-08-16  John Levon  <moz@compsoc.man.ac.uk>
 
 	* configure.in: bump version to 0.0.5cvs
