--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-08-18  John Levon  <moz@compsoc.man.ac.uk>
+
+	* dae/opd_proc.c: tiny cleanup
+ 
 2001-08-17  Philippe Elie  <ph_e@club-internet.fr>
 
 	* dae/opd_proc.c:
