--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2001-08-18  Philippe Elie  <ph_e@club-internet.fr>
+ 
+ 	* Makefile.in:
+	* dae/Makefile.in:
+	* pp/Makefile.in:
+	* doc/Makefile.in:
+ 	* gui/Makefile.in: add uninstall target
+ 
 2001-08-18  John Levon  <moz@compsoc.man.ac.uk>
 
 	* dae/opd_proc.c: tiny cleanup
