--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-09-02  John Levon  <moz@compsoc.man.ac.uk>
+
+	* oprofile.c: remove bogus setting for NMI oopser.
+	  smp_apic_restore() -> lvtpc_apic_restore()
+
 2001-09-01  Philippe Elie  <ph_e@club-internet.fr>
 
 	* oprofile.c: fix pmc_setup()
