--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2001-09-06  John Levon  <moz@compsoc.man.ac.uk>
 
+	* dae/op_start: more sanity checking of options
+ 
+2001-09-06  John Levon  <moz@compsoc.man.ac.uk>
+
 	* doc/oprofile.sgml: update a bit
  
 2001-09-06  John Levon  <moz@compsoc.man.ac.uk>
