--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2001-09-07  Philippe Elie  <ph_e@club-internet.fr>
+
+	* oprofile.c: remove /proc/.../cpu_type. Check if user
+	  mode cpu type detection is identical to module cpu type
+	* op_events.h:
+	* op_events.c: add op_get_cpu_type(). script can get cpu_type
+	  by op_help --get-cpu-type
+	* gui/oprofile: use it	
+	* dae/oprofiled.c: ditto
+	* dae/op_start: ditto, pass expected_cpu_type to module
+	* doc/oprofile.sgml: update
+	* doc/oprofile.1.in: update
+	* pp/oprofpp.c: get cpu_type from samples file
+	* pp/opf_filter.cpp: get cpu type from stdin
+
 2001-09-06  John Levon  <moz@compsoc.man.ac.uk>
 
 	* dae/opd_proc.c: use j not i in msync !
