--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2001-09-12  John Levon  <moz@compsoc.man.ac.uk>
 
+	* oprofile.h:
+	* oprofile.c:
+	* op_x86.c: move some code about
+ 
+	* op_syscalls.c: add comment
+ 
+2001-09-12  John Levon  <moz@compsoc.man.ac.uk>
+
 	* configure.in: remove warning
  
 	* op_user.h: 
