--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-09-16  John Levon  <moz@compsoc.man.ac.uk>
+
+	* pp/oprofpp.cpp: small tidy
+ 
 2001-09-16  Philippe Elie  <ph_e@club-internet.fr>
 
 	* pp/opf_filter.cpp: minor tidy
